# project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yaml  ci.yaml  lint.yaml  test.yaml
docs/source/: conf.py  index.rst
project/: params.py  utils.py
tests/: test_a.py
