[tool.poetry]
name = "project"
version = "0.0.1.dev"
description = "arguments checker and dependency inject library"
authors = ["Trim21 <i@trim21.me>"]
readme = 'README.md'
repository = 'https://github.com/Trim21/project'
license = 'MIT'
packages = [{ include = 'project' }]
classifiers = [
  'Intended Audience :: Developers',
  'Development Status :: 2 - Pre-Alpha',
  'License :: OSI Approved :: MIT License',
  'Topic :: Communications :: File Sharing',
  'Topic :: Internet',
  'Topic :: Software Development :: Version Control :: Git',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]

[tool.poetry.dependencies]
python = "^3.6.1"
# dependencies
pydantic = '^1.0.0'
# build cos
sphinx = { version = "==3.2.1", optional = true }
sphinx-rtd-theme = { version = "==0.5.0", optional = true }
pytest-github-actions-annotate-failures = "^0.0.6"

[tool.poetry.extras]
docs = ['sphinx', 'sphinx-rtd-theme']

[tool.poetry.dev-dependencies]
# tests
pytest = "==6.0.1"
coverage = "==5.2.1"
# linter and formatter
pre-commit = { version = "==2.6.0", markers = "implementation_name != 'pypy'" }
mypy = { version = "^0.770", markers = "implementation_name != 'pypy'" }
flake8 = "3.8.3"
flake8-comprehensions = "==3.2.3"
flake8-bugbear = "==20.1.4"
flake8-mutable = "1.2.0"
aiohttp = "^3.6.2"

[tool.isort]
default_section = 'THIRDPARTY'
indent = '    '
known_first_party = 'project'
length_sort = true
line_length = 88
multi_line_output = 3
no_lines_before = 'LOCALFOLDER'
use_parentheses = true
include_trailing_comma = true

[tool.coverage.report]
exclude_lines = [
  'pragma: no cover',
  'if TYPE_CHECKING:',
  'if __name__ == "__main__":'
]

[tool.pytest.ini_options]
addopts = '-rav'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
